fix spacing on submit buttons

--- a/lubuntu_style.css
+++ b/lubuntu_style.css
@@ -84,11 +84,15 @@ input[type=text], input[type=email], input[type=password] {
     border-radius: 5px;
 }
 
+input[type=submit] {
+    margin: 1rem 0 1rem 0;
+}
+
 button[type=submit] {
     -webkit-appearance: none;
     -moz-appearance: none;
     display: block;
-    margin: 1.5rem 0;
+    margin: 1.5rem;
     font-size: 1rem;
     line-height: 2.5rem;
     color: #333333;
